# pygerber

./: .bumpversion.cfg  .clang-format  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  LICENSE.md  MANIFEST.in  README.md  README.rst  check.bat  codecov.yml  latest  main.cpp  main.ipynb  meta.py  mkdocs.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tokenizer.py  tokens.py  tox.ini  versions.json
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  builder_gerber.md  compatibility_request.md  feature_request.md  gerber_formatter_bug.md  language_server_bug.md  language_server_bug_form.yml  pygerber_generic_bug.md  pygerber_vm_bug.md  syntax_feature_request.md
.github/workflows/: build_n_deploy_docs.yaml  code_quality.yaml  deploy_dev_docs.yaml  deploy_docs.yaml  deploy_latest_docs.yaml  deploy_release_docs.yaml  draft_release.yaml  main.yml  mirror_to_gitlab.yml  release_pr_tests.yaml  release_to_pypi.yaml  release_to_test_pypi.yaml  test.yaml  test_all.yaml  test_e2e.yaml  test_style.yaml  test_unit.yaml  type_checks.yaml  unit_tests.yaml
2.0.0/: 404.html  Changelog.html  index.html  objects.inv
2.0.0/gerber_specification/: revision_2017_05.html  revision_2021_11.html  revision_2023_03.html
2.0.0/reference/: SUMMARY.html
2.0.0/search/: search_index.js  search_index.json
2.0.1/: Changelog.html  LICENSE.html  index.html
2.0.1/css/: mkdocstrings.css
2.0.1/gerber/: advanced_api.html
2.0.1/gerber_specification/: RS-274X.html  revision_2020_09.html
2.0.1/search/: search_index.js  search_index.json
2.0.2/: Changelog.html  index.html  objects.inv  ruff.toml
2.0.2/gerber/: high_level_api.html
2.0.2/gerber_specification/: revision_2013_J1.html  revision_2016_01.html  revision_2022_02.html
2.0.2/search/: search_index.js  search_index.json
2.1.0/: Changelog.html  index.html  objects.inv
2.1.0/gerber/: high_level_api.html
2.1.0/gerber_specification/: RS-274X.html  revision_2016_01.html  revision_2017_05.html  revision_2020_09.html  revision_2021_11.html  revision_2023_03.html  revision_2023_08.html
2.1.0/reference/: SUMMARY.html
2.1.1/: 404.html  Changelog.html  LICENSE.html  index.html  objects.inv
2.1.1/gerber/: advanced_api.html
2.1.1/gerber_specification/: revision_2013_J1.html
2.2.0/: 404.html  Changelog.html  LICENSE.html  index.html  objects.inv
2.2.0/gerber/: 0_usage.html  1_reference.html  3_internal_api_v1.html  4_internal_api_v2.html
2.2.0/gerber_specification/: RS-274X.html  revision_2013_J1.html  revision_2016_01.html  revision_2017_05.html  revision_2020_09.html  revision_2021_11.html  revision_2023_03.html  revision_2023_08.html
2.2.0/reference/: SUMMARY.html
2.2.0/search/: search_index.js  search_index.json
2.2.1/: 404.html  Changelog.html  LICENSE.html  index.html  objects.inv
2.2.1/gerber/: 0_usage.html  1_reference.html  3_internal_api_v1.html  4_internal_api_v2.html  5_reference_svg.html
2.2.1/gerber_specification/: RS-274X.html  revision_2013_J1.html  revision_2016_01.html  revision_2017_05.html  revision_2020_09.html  revision_2021_11.html  revision_2023_03.html  revision_2023_08.html
2.2.1/macros/: main.py
2.2.1/reference/: SUMMARY.html
2.2.1/search/: search_index.js  search_index.json
2.3.0/: 404.html  Changelog.html  objects.inv
2.3.0/gerber/: 10_internal_api_v2.html  11_reference_svg.html  12_reference_raster.html
2.3.0/gerber_specification/: revision_2013_J1.html  revision_2023_03.html
2.3.0/search/: search_index.js  search_index.json
2.3.1/: Changelog.html  index.html
2.3.1/gerber/: 01_api_v2_reference.html  12_reference_raster.html  20_api_v1_usage.html  21_api_v1_reference.html
2.3.1/gerber_specification/: RS-274X.html  revision_2020_09.html  revision_2021_11.html  revision_2023_08.html
2.3.1/search/: search_index.js  search_index.json
2.3.2/: Changelog.html  LICENSE.html  generate_reference_pages.py  objects.inv
2.3.2/gerber/: 00_api_v2_usage.html  11_reference_svg.html  12_reference_raster.html  23_internal_api_v1.html
2.3.2/gerber_specification/: revision_2016_01.html  revision_2017_05.html
2.3.2/reference/: SUMMARY.html
2.3.2/search/: search_index.js  search_index.json
2.4.0/: 404.html  Changelog.html  LICENSE.html  objects.inv
2.4.0/70_gerber/: 00_api_v2_usage.html  10_internal_api_v2.html  (+2 more)
2.4.1/: Changelog.html  index.html  objects.inv
2.4.2/: 404.html  Changelog.html  LICENSE.html  hooks.py
2.4.3/: Changelog.html  index.html  objects.inv
3.0.0a0/: Changelog.html  LICENSE.html  index.html
3.0.0a1/: 404.html  Changelog.html  index.html  objects.inv
3.0.0a2/: 404.html  Changelog.html  LICENSE.html  index.html  objects.inv
3.0.0a3/: 404.html  Changelog.html  LICENSE.html  generate_reference_pages.py  index.html  objects.inv
3.0.0a4/: 30_changelog.html  404.html  index.html  objects.inv
dev/: 00_readme.html  10_license.html  30_changelog.html  404.html  Changelog.html  LICENSE.html  index.html  objects.inv
docs/: 00_readme.md  CHANGELOG.md  Changelog.md  LICENSE.md  README.md  cli.md  conf.py  index.rst  installation.rst  internal_flow_model.md  requirements.txt  ruff.toml  specfile.md  usage.rst
examples/: bottom_copper.grb  bottom_silk.grb  bottom_solder_mask.grb  cli.md  pillow_api.md  specfile.md
latest/: Changelog.html  LICENSE.html  index.html
pygerber/: __init__.py  __main__.py  cli.py  constants.py  coparser.py  drawing_state.py  exceptions.py  mathclasses.py  meta.py  parser.py  renderer.py  tokenizer.py  validators.py
scripts/: autodoc.bat  deploy_docs.py  fork_feature.py  fork_hotfix.py  fork_release.py  format.bat  format.py  get_release_notes.py  install_hooks.py  lines.bat  merge_feature.py  ruff.toml  version_tag.py
src/: requirements.txt
test/: .gitignore  conftest.py  ruff.toml  tags.py  test_hello.py  test_vector_2d.py
tests/: test_cli.py  test_coparser.py  test_mathclasses.py  test_pkg.py  test_tokenizer.py
(+4963 files in other folders)
